--- a/win2d/bindings/Cargo.toml
+++ b/win2d/bindings/Cargo.toml
@@ -4,7 +4,18 @@ version = "0.0.0"
 edition = "2018"
 
 [dependencies]
-windows = { version = "0.29", features = ["build", "Foundation", "Graphics_DirectX_Direct3D11"] }
+windows = { version = "0.29", features = [
+    "build",
+    "Foundation",
+    "Foundation_Numerics",
+    "Foundation_Collections",
+    "UI_Composition",
+    "UI_Input",
+    "UI_Input_Inking",
+    "UI_Text",
+    "Graphics_Imaging",
+    "Graphics_DirectX_Direct3D11",
+] }
 
 [build-dependencies]
 windows = { version = "0.29", features = ["build"] }
